[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scenes/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scenes/Platform.tscn" type="PackedScene" id=4]

[node name="Level" type="Spatial"]
script = ExtResource( 2 )

[node name="Gound" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
rotating_speed = 16.0
walking_speed = 8.0
angle_precision = 0.01
max_angle_to_move = 0.25

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 3, -5 )
current = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.5, -0.433013, 0.75, 0, 0.866025, 0.5, -0.866025, -0.25, 0.433013, 0, 0, 0 )

[node name="Label" type="Label" parent="."]
margin_top = 27.0
margin_right = 40.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "change camera"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, -0.258819, 0.965926, 0, 0.965926, 0.258819, -1, 4.2167e-08, -1.57369e-07, 10, 5, 10 )

[node name="Platform" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 1, -15 )

[node name="Platform3" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 20 )

[node name="Platform2" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 8, 20 )
[connection signal="set_destination" from="Gound" to="." method="set_destination"]
[connection signal="pressed" from="Button" to="." method="switch_camera"]
[connection signal="set_destination" from="Platform" to="." method="set_destination"]
[connection signal="set_destination" from="Platform3" to="." method="set_destination"]
[connection signal="set_destination" from="Platform2" to="." method="set_destination"]
